# pickmyelective

./: .gitignore  README.md  lefthook.yml  package.json
backend/demo/: .env.example  pom.xml
docs/: API_CONTRACTS.md  DATA_RAG_PIPELINE.md  QUERY_REFERENCE.md  TECHNICAL_ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  globals.css  index.css  main.tsx
frontend/src/components/: CourseCard.tsx  FilterPanel.tsx  LoginModal.tsx  QueryHistory.tsx  QueryLimitIndicator.tsx  SearchBar.tsx  index.ts
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/services/: api.ts  auth.ts
frontend/src/types/: index.ts
rag/: .env.example  QUERY_EXAMPLES.md  README.md  pyproject.toml  requirements.txt
rag/data/: ranking_evaluation.json
rag/data/processed/: electives_1264.json
rag/data/raw/: courses_1264.json
rag/data/transformed/: documents_1264.checkpoint.json  documents_1264.json
rag/scripts/: analyze_courses.py  evaluate_ranking.py  fetch_courses.py  index_courses.py  preprocess_courses.py  run_server.py  transform_courses.py
rag/src/: __init__.py
rag/src/api/: __init__.py  dependencies.py  main.py  routes.py
rag/src/data/: __init__.py  coursys.py  fetcher.py  models.py  sfu_outlines.py
rag/src/index/: __init__.py  indexer.py  models.py
rag/src/processing/: __init__.py  models.py  preprocessor.py
rag/src/query/: __init__.py  engine.py  models.py
rag/src/transform/: __init__.py  models.py  transformer.py
rag/tests/: __init__.py  conftest.py  test_api.py  test_filters.py
(+26 files in other folders)
